--- a/eedewasa/manifest.json
+++ b/eedewasa/manifest.json
@@ -9,7 +9,7 @@
     "theme_color": "transparent",
     "description": "Helps you spread the Gospel",
     "orientation": "landscape",
-    "background_color": "#000",
+    "background_color": "#fff",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
