--- a/eedewasa/manifest.json
+++ b/eedewasa/manifest.json
@@ -1,12 +1,8 @@
 {
-    "dir": "ltr",
-    "lang": "en-us",
     "name": "Do you know for sure?",
-    "scope": "/eedewasa/index.html",
-    "display": "fullscreen",
-    "start_url": "https://david23zack.github.io/eedewasa/index.html",
+    "display": "standalone",
+    "start_url": ".",
     "short_name": "Do You Know",
-    "theme_color": "transparent",
     "description": "Helps you spread the Gospel",
     "orientation": "landscape",
     "background_color": "#fff",
