--- a/eedewasa/manifest.json
+++ b/eedewasa/manifest.json
@@ -10,22 +10,22 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "./images/icon-1024x1024.png",
+            "src": "./eedewasa/images/icon-1024x1024.png",
             "sizes": "1024x1024",
             "type": "image/png"
         },
         {
-            "src": "./images/icon-512x512.png",
+            "src": "./eedewasa/images/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "./images/icon-192x192.png",
+            "src": "./eedewasa/images/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "./images/icon-144x144.png",
+            "src": "./eedewasa/images/icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         }
